Adding the compilable runyms binary

--- a/src/aot/CMakeLists.txt
+++ b/src/aot/CMakeLists.txt
@@ -5,4 +5,6 @@ add_subdirectory (contrib)
 add_subdirectory(GraphanLib)
 add_subdirectory (LemmatizerLib)
 add_subdirectory (MorphWizardLib)
+add_subdirectory (PCRE)
+add_subdirectory (RmlThesLib)
 add_subdirectory (StructDictLib)
