albert: Adding download_glue_data.py

--- a/research/albert/Dockerfile
+++ b/research/albert/Dockerfile
@@ -3,4 +3,6 @@ FROM tensorflow/tensorflow:latest
 
 WORKDIR /albert
 COPY albert /albert
-CMD [ "/albert/run_glue.sh" ]
+COPY download_glue_data.py /albert/download_glue_data.py
+COPY start /albert/start
+CMD [ "/albert/start" ]
