--- a/research/albert/Dockerfile
+++ b/research/albert/Dockerfile
@@ -3,6 +3,7 @@ FROM tensorflow/tensorflow:latest
 
 WORKDIR /albert
 COPY albert /albert
-COPY download_glue_data.py /albert/download_glue_data.py
+COPY tmp/glue_data /albert/glue_data
+#COPY download_glue_data.py /albert/download_glue_data.py
 COPY start /albert/start
 CMD [ "/albert/start" ]
